--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+#Datasource
+spring.datasource.url=jdbc:postgresql://localhost:5432/disney
+spring.datasource.username=postgres
+spring.datasource.password=admin
+#Hibernate
+spring.jpa.hibernate.ddl-auto=update
+#SQL
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=false
