added the security and email services

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.jpa.hibernate.ddl-auto=update
 #SQL
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=false
+spring.main.allow-circular-references=true
+#Emails
+alkemy.disney.email.sender=martGutierrez98@outlook.com
+alkemy.disney.email.enabled=true
