--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,10 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>alkemy-lab</name>
 	<description>Demo project for Spring Boot</description>
+	<properties>
+		<java.version>18</java.version>
+		<spring-security.version>5.6.5</spring-security.version>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -43,6 +47,10 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+		</dependency>
 
 		<!-- Auth -->
 		<dependency>
@@ -55,6 +63,22 @@
 			<version>0.9.1</version>
 		</dependency>
 		<!-- Auth -->
+		<!-- SendGrid -->
+		<dependency>
+			<groupId>com.sendgrid</groupId>
+			<artifactId>sendgrid-java</artifactId>
+			<version>4.9.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sendgrid</groupId>
+			<artifactId>java-http-client</artifactId>
+			<version>4.5.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sendgrid</groupId>
+			<artifactId>smtpapi-java</artifactId>
+			<version>1.3.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
