added some properties to the app

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,15 @@ spring.datasource.password=admin
 #Hibernate
 spring.jpa.hibernate.ddl-auto=update
 #SQL
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.main.allow-circular-references=true
+#App Propertis
+alkemy.app.jwtCookieName= cookieName
+alkemy.app.jwtSecret= benikoSecretKey
+alkemy.app.jwtExpirationMs= 86400000
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #Emails
 alkemy.disney.email.sender=martGutierrez98@outlook.com
-alkemy.disney.email.enabled=true
+alkemy.disney.email.enabled=false
