added some unit test for the character controller, need to do the next methods and classes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,5 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #Emails
 alkemy.disney.email.sender=martGutierrez98@outlook.com
 alkemy.disney.email.enabled=false
+#Swagger
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
