added the auth to let everyone see swagger doc api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,12 +10,12 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.main.allow-circular-references=true
 #App Propertis
-alkemy.app.jwtCookieName= cookieName
-alkemy.app.jwtSecret= benikoSecretKey
+alkemy.app.jwtCookieName= cookieUser
+alkemy.app.jwtSecret= jwtSecretKey
 alkemy.app.jwtExpirationMs= 86400000
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #Emails
 alkemy.disney.email.sender=martGutierrez98@outlook.com
-alkemy.disney.email.enabled=false
+alkemy.disney.email.enabled=true
 #Swagger
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
